[package]
name = "oyl-zap-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { workspace = true }
alkanes-runtime = { workspace = true }
alkanes-std-factory-support = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
ordinals = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
num = { workspace = true }
ruint = { workspace = true }

[dev-dependencies]
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", features = [
    "test-utils"
] }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = [
    "test-utils",
] }
serde = { version = "1.0", features = ["derive"] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", features = [
    "test-utils",
] }
